syntax = "proto3";

package social_link;

import "user.proto";

message PaginationRequest {
    int32 page = 1;
    int32 size = 2;
}

message SocialLink {
    string id = 1;
    string alias = 2;
    string title = 3;
    string href = 4;
    User creator = 5;
    string creator_id = 6;
    string created_at = 7;
    optional string icon = 8;
}

message SocialLinks {
    repeated SocialLink items = 1;
}

service SocialLinkService {
    rpc GetSocialLinks (PaginationRequest) returns (SocialLinks) {}
}

